# powkit-rs

./: Cargo.toml  README.md
src/: constant.rs  lib.rs
src/internal/: mod.rs
src/internal/crypto/: fnv.rs  hasher.rs  keccak.rs  mod.rs
src/internal/dag/: cache.rs  config.rs  data_file.rs  mod.rs
src/internal/progpow/: algorithm.rs  config.rs  convutil.rs  kiss99.rs  math.rs  mix_rng.rs  mod.rs
src/kawpow/: client.rs  lookup.rs  mod.rs
tests/: test_algorithm.rs  test_compute_raven_coin.rs
